--- a/basic/web/css/login.css
+++ b/basic/web/css/login.css
@@ -4,3 +4,13 @@
     left: 200px;
     top: 200px;
 }
+td{
+    background-color: #f0f0f0;
+    padding: 0;
+    text-align: center;
+}
+td a{
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+}
